<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".ArithmeticActivity">

    <GridLayout
        android:id="@+id/mem_grid"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="284dp"
        android:clickable="false"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/gridButton0"
            android:layout_width="142dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="0"
            android:backgroundTint="@color/white"
            android:onClick="onMemButtonClick"
            android:textColor="@color/purple_700"
            android:textSize="32dp" />

        <Button
            android:id="@+id/gridButton1"
            android:layout_width="142dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/white"
            android:onClick="onMemButtonClick"
            android:textColor="@color/red"
            android:textSize="32dp" />

        <Button
            android:id="@+id/gridButton2"
            android:layout_width="142dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/white"
            android:onClick="onMemButtonClick"
            android:textColor="@color/teal_700"
            android:textSize="32dp" />

        <Button
            android:id="@+id/gridButton3"
            android:layout_width="142dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/white"
            android:onClick="onMemButtonClick"
            android:textColor="@color/pink"
            android:textSize="32dp" />

    </GridLayout>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/scoreTitle"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="17dp"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="105dp"
        android:text="@string/livesHeader"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/Live0"
        android:layout_width="58dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/livetrig" />

    <ImageView
        android:id="@+id/Live1"
        android:layout_width="58dp"
        android:layout_height="77dp"
        android:layout_marginStart="81dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/livetrig" />

    <ImageView
        android:id="@+id/Live2"
        android:layout_width="58dp"
        android:layout_height="77dp"
        android:layout_marginStart="146dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/livetrig" />


</androidx.constraintlayout.widget.ConstraintLayout>